--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
-<p>Hola este es mi primera linea en Git Bash </p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to my page</title>
+</head>
+<body>
+    <h1>El titulo de mi primera pagina</h1>
+
+    <p>Hola este es mi primera linea en Git Bash </p>
+    <img src="https://i.imgur.com/dvVyixv.jpeg" alt="La imagen de una piña rodando">
+</body>
+</html>
+
 
 
