--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h1>El titulo de mi primera pagina</h1>
-
+    
     <p>Hola este es mi primera linea en Git Bash </p>
+    
+    <p>Abajo encontraras una pizza con piña</p>
     <img src="https://i.imgur.com/dvVyixv.jpeg" alt="La imagen de una piña rodando">
 </body>
 </html>
