--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Welcome to my page</title>
 </head>
 <body>
-    <h1>El titulo de mi primera pagina</h1>
+    <h1>El titulo de mi primera página</h1>
 
     <p>Hola este es mi primera linea en Git Bash </p>
+    <h1>quiero colocar un emoji :D &#128512;</h1>
     <img src="https://i.imgur.com/dvVyixv.jpeg" alt="La imagen de una piña rodando">
 </body>
 </html>
